Added comments to the style section

--- a/project2.html
+++ b/project2.html
@@ -25,6 +25,7 @@ Project Description: This program creates team, basketballTeam, and game classes
             background-size:cover;
         }
 
+        /*Top area with introductory text: title and instructions*/
         #intro
         {
             text-align: center;
@@ -39,11 +40,13 @@ Project Description: This program creates team, basketballTeam, and game classes
             font-size: 40px;
         }
 
+        /*Middle area that contains the team list, play button, and season results*/
         #mainContainer
         {
             overflow: auto;
         }
 
+        /*Box that contains the list of teams*/
         .teams
         {
             border: solid black 3px;
@@ -61,11 +64,13 @@ Project Description: This program creates team, basketballTeam, and game classes
             height: fit-content;
         }
 
+        /*List of teams text*/
         #teamList
         {
             display: block;
         }
 
+        /*Play game button in the center*/
         #inputButton
         {
             font-family: fantasy;
@@ -88,6 +93,7 @@ Project Description: This program creates team, basketballTeam, and game classes
             vertical-align: middle;
         }
 
+        /*Box that displays the season results*/
         #rightSide
         {
             border: solid black 3px;
@@ -104,6 +110,7 @@ Project Description: This program creates team, basketballTeam, and game classes
             height: fit-content;
         }
 
+        /*Basketball Image at the bottom*/
         #ballImg
         {
             margin-top: 3%;
@@ -111,6 +118,7 @@ Project Description: This program creates team, basketballTeam, and game classes
             height: 250px;
         }
 
+        /*NCAA Logo Image at the bottom*/
         #ncaaImg
         {
             margin-top: 3%;
