Messed with some comments
Changed some stuff for fun

--- a/project2.html
+++ b/project2.html
@@ -1,3 +1,5 @@
+<!--Additional comments could go here-->
+
 <html lang="en">
 <!--
     Shannon Murray
@@ -140,7 +142,7 @@ Project Description: This program creates team, basketballTeam, and game classes
     </style>
 </head>
 <body>
-    <!--Top Intro Code that gives a title and instructions-->
+    <!--Top Intro Code nstructions-->
     <div id="intro">
         <h1>Welcome to Basketball Season Simulator!</h1>
         <br>
