messed with comments

--- a/project2.html
+++ b/project2.html
@@ -272,10 +272,7 @@ Project Description: ...
         //Make sure to call parent class!
         //Instance Variables/Attributes
         /*  totalPointsFor; (int)
-            totalPointsAgainst; (int)
-        */
-        //Methods
-        /*  addPointsFor - when called, receives 1 (int) parameter; this value is added to the "TotalPointsFor" attribute
+             receives 1 (int) parameter; this value is added to the "TotalPointsFor" attribute
             addPointsAgainst - when called, receives 1 (int) parameter; this value is added to the "TotalPointsAgainst" attribute
             getAllPoints = when called, return a string with the "totalPointsFor" and the "totalPointsAgainst" like this:
                             EXAMPLE:
